--- a/about/index.html
+++ b/about/index.html
@@ -28,6 +28,7 @@ Language: 中文(Chinese)/日本語(Japanese)/English
 <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.css integrity=sha384-MlJdn/WNKDGXveldHDdyRP1R4CTHr3FeuDNfhsLPYrq2t0UBkUdK2jyTnXPEK1NQ crossorigin=anonymous>
 <script defer src=https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.js integrity=sha384-VQ8d8WVFw0yHhCk5E8I86oOhv48xLpnDZx5T9GogA/Y84DcCKWXDmSDfn13bzFZY crossorigin=anonymous></script>
 <script defer src=https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/contrib/auto-render.min.js integrity=sha384-+XBljXPPiv+OzfbB3cVmLHf4hdUFHlWNZN5spNQ7rmHTXpd7WvJum6fIACpNNfIR crossorigin=anonymous onload=renderMathInElement(document.body)></script>
+<script async src=//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js></script>
 <meta property="og:title" content="About">
 <meta property="og:description" content="Welcome!
 This site is mainly used to record and accumulate some technical problems I encountered, most of which are written in a mess (please don&rsquo;t mind&mldr;), it would be great if these posts can help you, even just a little.
@@ -91,7 +92,7 @@ Language: 中文(Chinese)/日本語(Japanese)/English
 <h1 class=post-title>
 About
 </h1>
-<div class=post-meta><span title="2022-02-26 17:45:42 +0800 +0800">February 26, 2022</span>
+<div class=post-meta><span title="2022-02-26 17:45:42 +0800 +0800">February 26, 2022</span>&nbsp;·&nbsp;1 min&nbsp;·&nbsp;52 words&nbsp;·&nbsp;<span id=busuanzi_container_site_pv><span id=busuanzi_value_site_pv></span>view</span>
 </div>
 </header>
 <div class=post-content><p>Welcome!</p>
