--- a/about/index.html
+++ b/about/index.html
@@ -92,7 +92,8 @@ Language: 中文(Chinese)/日本語(Japanese)/English
 <h1 class=post-title>
 About
 </h1>
-<div class=post-meta><span title="2022-02-26 17:45:42 +0800 +0800">February 26, 2022</span>&nbsp;·&nbsp;1 min&nbsp;·&nbsp;52 words&nbsp;·&nbsp;<span id=busuanzi_container_page_pv><span id=busuanzi_value_page_pv></span> views</span>
+<div class=post-meta>
+<span title="2022-02-26 17:45:42 +0800 +0800">February 26, 2022</span>&nbsp;·&nbsp;1 min&nbsp;·&nbsp;52 words&nbsp;·&nbsp;<span id=busuanzi_container_page_pv><span id=busuanzi_value_page_pv></span> views</span>
 </div>
 </header>
 <div class=post-content><p>Welcome!</p>
