--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@ hugo LeaveIt主题优化二 - 简书
 blogdown搭建网站以及hugo主题修改_Liripo-CSDN博客
 Pasting images into Hugo markdown with vsCode on macOS</p>
 </section>
-<footer class=entry-footer><span title="2022-02-13 21:50:06 +0800 +0800">February 13, 2022</span>&nbsp;·&nbsp;1 min&nbsp;·&nbsp;54 words&nbsp;·&nbsp;<span id=busuanzi_container_page_pv><span id=busuanzi_value_page_pv></span> views</span></footer>
+<footer class=entry-footer>
+<span title="2022-02-13 21:50:06 +0800 +0800">February 13, 2022</span>&nbsp;·&nbsp;1 min&nbsp;·&nbsp;54 words</footer>
 <a class=entry-link aria-label="post link to Hugo建站参考" href=https://M00Nwisher.github.io/post/hugo-bulit-blog/></a>
 </article>
 <article class=post-entry>
@@ -102,7 +103,8 @@ Pasting images into Hugo markdown with vsCode on macOS</p>
 CodePresent Day, Present Time
 </p>
 </section>
-<footer class=entry-footer><span title="2022-02-12 22:50:06 +0800 +0800">February 12, 2022</span>&nbsp;·&nbsp;1 min&nbsp;·&nbsp;13 words&nbsp;·&nbsp;<span id=busuanzi_container_page_pv><span id=busuanzi_value_page_pv></span> views</span></footer>
+<footer class=entry-footer>
+<span title="2022-02-12 22:50:06 +0800 +0800">February 12, 2022</span>&nbsp;·&nbsp;1 min&nbsp;·&nbsp;13 words</footer>
 <a class=entry-link aria-label="post link to Helloworld" href=https://M00Nwisher.github.io/post/helloworld/></a>
 </article>
 </main>
